2001-05-09  Hans Petter Jansson  <hpj@ximian.com>

	* disks-conf.in: Include '-' in fstab option matching.

2001-05-09  Hans Petter Jansson  <hpj@ximian.com>

	* network.pl.in: For redhat-7.0, smb.conf is in /etc/samba/smb.conf. Make
	  a new pair of parse/replace-tables for this.

2001-05-09  Hans Petter Jansson  <hpj@ximian.com>

	* filesys.pl.in (xst_filesys_info_get_network_host): Implement.
	  (xst_filesys_info_set_network_host): Implement.
	  (xst_filesys_info_get_network_path): Implement.
	  (xst_filesys_info_set_network_path): Implement.
	  (xst_filesys_info_get_mounted): Implement.
	  (xst_filesys_info_set_mounted): Implement.
	  (xst_filesys_info_get_permanent): Implement.
	  (xst_filesys_info_set_permanent): Implement.
	  (xst_filesys_info_get_detected): Implement.
	  (xst_filesys_info_set_detected): Implement.
	  (xst_filesys_table_set_mounted_true): Implement.
	  (xst_filesys_table_set_permanent_true): Implement.
	  (xst_filesys_table_set_detected_true): Implement.
	  (xst_filesys_parse_fstab): Parse network-specific options.
	  (xst_filesys_parse_mtab): Ditto.

2001-05-09  Arturo Espinosa Aldama  <arturo@ximian.com>

	* 0.4 RELEASE

2001-05-09  Hans Petter Jansson  <hpj@ximian.com>

	* time-conf.in: Red Hat 7.0 timezone fix from Arturo.

2001-05-09  Arturo Espinosa Aldama  <arturo@ximian.com>

	* report.pl.in (xst_report): We're sending report strings into debug
	file again: they're quite useful.

	* debug.pl.in (xst_debug_open_output_file): set up a hash here so we
	cache the opened files. 
	(xst_debug_print_string_to_file): Not closing this files any more.

2001-05-08  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (set_immediate): Fix up the path before creating share
	  string.

2001-05-08  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (set_immediate): Use smbmount directly and don't rely on
	  fstab entry.

2001-05-08  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network-conf.in (xml_print): Oops: print dialinstalled